package com.pattern.behavioral.strategy.travel;

public interface TravelStrategy {
    void travel(String source, String destination);
}
